# hiisi-supervisor

./: Cargo.toml  README.org  rustfmt.toml
hiidet/: Cargo.toml
hiidet/src/: main.rs  monitor.rs  ports.rs  process.rs  server.rs  state.rs
hiisi/: Cargo.toml
hiisi-common/: Cargo.toml
hiisi-common/src/: frame.rs  protocol.rs
hiisi/src/: client.rs  display.rs  logs.rs  main.rs
