[package]
name = "hiisi"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
nix = "0.29.0"
ron = "0.8.1"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full", "io-std", "io-util", "net"] }
tracing = "0.1.41"
