[package]
name = "hiisi"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive"] }
hiisi-common = { version = "0.1.0", path = "../hiisi-common" }
humantime = "2.1.0"
nix = "0.29.0"
ron = "0.8.1"
serde = { version = "1.0.215", features = ["derive"] }
tabled = "0.17.0"
tokio = { version = "1.41.1", features = ["full", "io-std", "io-util", "net"] }
tokio-stream = { version = "0.1.16", features = ["full"] }
tracing = "0.1.41"
users = "0.11.0"
